# serializer version: 1
# name: TestGenerateDetectsChanges.test_detects_new_symbol
  '''
  Generating maps: <TMP>/src/calculator -> <TMP>/docs/map
  
  Created: 0 files
  Updated: 0 files
  Orphaned: 0 files
  Unfilled: 4 placeholders
  
  New sections:
    modules/calculator/core.md: Calculator
    modules/calculator/core.md: __init__
    modules/calculator/core.md: add
    modules/calculator/core.md: clear
    modules/calculator/core.md: divide
    modules/calculator/core.md: history
    modules/calculator/core.md: multiply
    modules/calculator/core.md: subtract
    modules/calculator/core.md: value
    modules/calculator/operations.md: add
    modules/calculator/operations.md: divide
    modules/calculator/operations.md: modulo
    modules/calculator/operations.md: multiply
    modules/calculator/operations.md: subtract
  
  '''
# ---
# name: TestGenerateDetectsChanges.test_detects_removed_symbol
  '''
  Generating maps: <TMP>/src/calculator -> <TMP>/docs/map
  
  Created: 0 files
  Updated: 0 files
  Orphaned: 0 files
  Unfilled: 3 placeholders
  
  New sections:
    modules/calculator/core.md: Calculator
    modules/calculator/core.md: __init__
    modules/calculator/core.md: add
    modules/calculator/core.md: clear
    modules/calculator/core.md: divide
    modules/calculator/core.md: history
    modules/calculator/core.md: multiply
    modules/calculator/core.md: subtract
    modules/calculator/core.md: value
    modules/calculator/operations.md: add
    modules/calculator/operations.md: multiply
    modules/calculator/operations.md: subtract
  
  '''
# ---
# name: TestGenerateDetectsChanges.test_docstring_changes_update_map
  '''
  Generating maps: <TMP>/src/calculator -> <TMP>/docs/map
  
  Created: 0 files
  Updated: 0 files
  Orphaned: 0 files
  Unfilled: 3 placeholders
  
  New sections:
    modules/calculator/core.md: Calculator
    modules/calculator/core.md: __init__
    modules/calculator/core.md: add
    modules/calculator/core.md: clear
    modules/calculator/core.md: divide
    modules/calculator/core.md: history
    modules/calculator/core.md: multiply
    modules/calculator/core.md: subtract
    modules/calculator/core.md: value
    modules/calculator/operations.md: add
    modules/calculator/operations.md: divide
    modules/calculator/operations.md: multiply
    modules/calculator/operations.md: subtract
  
  '''
# ---
# name: TestGenerateIdempotent.test_second_run_no_changes
  '''
  Generating maps: <TMP>/src/calculator -> <TMP>/docs/map
  
  Created: 0 files
  Updated: 0 files
  Orphaned: 0 files
  Unfilled: 3 placeholders
  
  New sections:
    modules/calculator/core.md: Calculator
    modules/calculator/core.md: __init__
    modules/calculator/core.md: add
    modules/calculator/core.md: clear
    modules/calculator/core.md: divide
    modules/calculator/core.md: history
    modules/calculator/core.md: multiply
    modules/calculator/core.md: subtract
    modules/calculator/core.md: value
    modules/calculator/operations.md: add
    modules/calculator/operations.md: divide
    modules/calculator/operations.md: multiply
    modules/calculator/operations.md: subtract
  
  '''
# ---
# name: TestGenerateNewMap.test_generate_calculator_fixture
  '''
  Generating maps: <TMP>/src/calculator -> <TMP>/docs/map
  
  Created: 5 files
  Updated: 0 files
  Orphaned: 0 files
  Unfilled: 3 placeholders
  
  Created files:
    README.md
    ARCHITECTURE.md
    modules/calculator/core.md
    modules/calculator/operations.md
    domains/calculator.md
  
  New sections:
    modules/calculator/core.md: Calculator
    modules/calculator/core.md: __init__
    modules/calculator/core.md: add
    modules/calculator/core.md: clear
    modules/calculator/core.md: divide
    modules/calculator/core.md: history
    modules/calculator/core.md: multiply
    modules/calculator/core.md: subtract
    modules/calculator/core.md: value
    modules/calculator/operations.md: add
    modules/calculator/operations.md: divide
    modules/calculator/operations.md: multiply
    modules/calculator/operations.md: subtract
  
  '''
# ---
